Added Freewill as a workaround to solve the initial black screen issue.

--- a/Falldown/index.html
+++ b/Falldown/index.html
@@ -31,6 +31,7 @@
 					engineDir:
 						'./cocos/cocos2d/',		/* Location of the cocos2d framework. */
 					appFiles: [
+                        './js/Freewill.js',		/* Generic virtual controls. */
                         './js/RailFactory.js',  /*Helper class to create random rails*/
 						'./resources.js',
 						'./js/Effect.js',
