--- a/Falldown/index.html
+++ b/Falldown/index.html
@@ -33,6 +33,7 @@
 					engineDir:
 						'./cocos/cocos2d/',		/* Location of the cocos2d framework. */
 					appFiles: [
+                        './resources.js',
                         './js/Freewill.js',		/* Generic virtual controls. */
                         './js/RailFactory.js',  /*Helper class to create random rails*/
 						'./js/GameOver.js',
