Improved the design of main and game menu.

--- a/Falldown/index.html
+++ b/Falldown/index.html
@@ -15,13 +15,13 @@
 	<body>
 		<div id="freewill"></div>
         <div id="preventSleep" hidden="hidden">
-            <video id="preventSleepVideo" src="res/music/fish_frenzy_clip.m4v" loop="loop" preload="true"></video>
+            <video id="preventSleepVideo" src="res/music/fish_frenzy_clip.m4v" loop="loop"></video>
         </div>
-        <audio id="gameMusic" src="res/music/game_bg_GreenCats.mp3" loop="loop" preload="true"></audio>
-        <audio id="menuMusic" src="res/music/menu_bg_FogOfPeace.mp3" loop="loop" preload="true"></audio>
+        <audio id="gameMusic" src="res/music/game_bg_GreenCats.mp3" loop="loop"></audio>
+        <!--<audio id="menuMusic" src="res/music/menu_bg_FogOfPeace.mp3" loop="loop" preload="true" autoplay="true"></audio>-->
 		<canvas id="ccCanvas"></canvas>
-		<!--<script type="text/javascript" src="./js/webworks-1.0.2.9.js"></script>-->
-		<script type="text/javascript" src="./js/webworks-1.0.4.5.js"></script>
+		<script type="text/javascript" src="./js/webworks-1.0.2.9.js"></script>
+		<!--<script type="text/javascript" src="./js/webworks-1.0.4.5.js"></script>-->
 		<script type="text/javascript">
 			/* Once WebWorks is ready, we will begin our Cocos2d-HTML5 initailization. */
 			function onwebworksready() {
