Redesigned the menus

--- a/Falldown/index.html
+++ b/Falldown/index.html
@@ -42,6 +42,7 @@
                         './js/Freewill.js',		/* Generic virtual controls. */
                         './js/RailFactory.js',  /*Helper class to create random rails*/
 						'./js/GameOver.js',
+						'./js/PauseMenu.js',
 						'./js/MainMenu.js',
 						'./js/GameScene.js'	/* Our primary layer. */
 					]
